List of user-visible changes of Public Domain Ratfor.

New in 1.0j
-----------
 * Since Fortran 77 is ubiquitous today, and Fortran 66 almost forgotten,
   Ratfor now output Fortran 77 code, without bothering anymore about
   Fortran 66 compatibility.
 * The `string' directive is no more recognized.  It should be superseded
   by the improved string-handling capabilities of Fortran 77.
 * The handling of the `-o' has been improved; in particular
    - error messages are more detailed;
    - `-o -' sends output to standard output;
    - files are no more unnecessarily overwritten if multiple `-o'
      options are specified (only the last one is honoured).
 * The error messages have been generally improved and made more detailed.
   A prominent example of this improvement is the increased level of
   details in messages about I/O failures, with the explicit indication of
   the failure's reason, e.g. `No such file or directory' or `Permission
   denied'.
 * Now ratfor complains if given more than one non-option arguments,
   instead of silently discarding all the extra arguments.
 * Messages about usage errors involving unknown option or options called
   in the wrong way have now the format:
    <PROGNAME>: `-<OPTION>': <ERROR-MESSAGE>
 * Now the `configure' scripts tries by defaults to enable as many warnings
   as possible in the C compiler.  Currently, there is no way to disable
   this behaviour.
 * There is a new configure option, `--enable-werror-flags', which tries
   to enable the `-Werror' compiler flag (if the compiler supports itd), to
   turn compile-time warnings into errors.  This option is expected to be
   used mostly by maintainers.
 * Previously, if the user used GNU make, maintainer-specific make rules
   were uncoditionally imported by the GNUmakefile.  Now the user must pass
   the option `--enable-maintainer-make-rules' to configure to enable the
   importing of such rules.  This option is expected to be used only by
   maintainers.