@@ -1,4 +1,4 @@
-# configure.ac file for Public Domain Ratfor
+# configure.ac file for Ratfor Testsuite.
 # Process this file with autoconf to produce a configure script.
 
 m4_pattern_forbid([^_?RAT4_])
@@ -11,21 +11,12 @@ m4_define([__vim_modeline__], [@%:@ v][im: ft=sh ts=8 sw=8 noet])
 #
 
 AC_PREREQ([2.64])
-AC_INIT([ratfor], [1.0j], [stefano.lattarini@gmail.com])
+AC_INIT([Ratfor Testsuite], [0.9a], [stefano.lattarini@gmail.com])
 
-AC_CONFIG_SRCDIR([src/rat4-common.h])
+AC_CONFIG_SRCDIR([while_f77.test])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([build-aux])
-# the testsuite is kept in a separate subpackage.
-AC_CONFIG_SUBDIRS([tests])
-
-# Since $RATFOR is declared in tests/configure.ac as a precious variable,
-# this will pass the proper value of $RATFOR to tests/configure.
-# NOTE: in configure, the current working directory (returned by `pwd')
-# is the build directory.
-RATFOR=`pwd`/src/ratfor; export RATFOR
-AC_MSG_NOTICE([exported RATFOR='$RATFOR'])
 
 #
 # Maintainer-specific initializations and defaults.
@@ -37,8 +28,18 @@ RAT4_INCLUDE_MAINT_CONFIG_SITE
 # Automake's initializations.
 #
 
-AM_INIT_AUTOMAKE([1.11 foreign -Wall -Werror no-installinfo no-texinfo.tex])
+AM_INIT_AUTOMAKE([1.11 foreign -Wall -Werror -Wno-override color-tests
+                       parallel-tests no-installinfo no-texinfo.tex])
 AM_SILENT_RULES([yes]) # make `--enable-silent-rules' the default
+
+#
+# Check for a ratfor program to be used by the test scripts.
+#
+AC_PATH_PROGS([RATFOR], [ratfor ratfor77], [:])
+if test x"$RATFOR" = x":"; then
+    AC_MSG_ERROR([No ratfor program found])
+fi
+AC_ARG_VAR([RATFOR], [Ratfor preprocessor to be used by the testsuite])
 
 #
 # Checks for C compiler and support.
@@ -62,30 +63,28 @@ if test x"$ac_cv_header_stdc" != x"yes"; then
     AC_MSG_ERROR([some system standard C headers seem broken])
 fi
 
-for header in errno unistd; do
-    AC_CHECK_HEADER([$header.h], [:],
+for header in errno unistd signal fcntl; do
+    AC_CHECK_HEADERS([$header.h], [:],
         [AC_MSG_ERROR([header `<$header.h>' not found or broken])])
 done
 AS_UNSET([header])
 
-#
-# Check for booleans' support.
-#
-
-AC_HEADER_STDBOOL
+AC_HEADER_SYS_WAIT
+if test x"$ac_cv_header_sys_wait_h" != x"yes"; then
+    AC_MSG_ERROR([header `<sys/wait.h>' not found or broken])
+fi
 
 #
 # Checks for typedefs, structures, and compiler characteristics.
 #
 
 AC_C_CONST
-AC_C_INLINE
 
 #
 # Checks for library functions.
 #
 
-for func in getopt strerror vfprintf; do
+for func in getopt alarm signal sigaction vfprintf; do
     AC_CHECK_FUNC([$func], [:],
         [AC_MSG_ERROR([No proper `$func' subroutine found])])
 done
@@ -103,21 +102,6 @@ RAT4_ARG_ENABLE(
     [rat4_maybe_werror=-Werror],
     [rat4_maybe_werror=''])
 
-# Option `--enable-maintainer-make-rules' tells that maintaner-specific
-# rules should be imported in the GNUmakefile.
-RAT4_ARG_ENABLE(
-    [maintainer-make-rules],
-    [Import maintaner-specific rules in the GNUmakefile. Use it only if
-      you have GNU make, and you know what you are doing. Also, note that
-      this option has *NOTHING* to do with the infamous automake's
-      "maintainer-mode".],dnl '# font-lock
-    [rat4_enable_maintainer_make_rules=yes],
-    [rat4_enable_maintainer_make_rules=no])
-
-m4_pattern_allow([RAT4_ENABLE_MAINTAINER_MAKE_RULES])
-AM_CONDITIONAL([RAT4_ENABLE_MAINTAINER_MAKE_RULES],
-               [test x"$rat4_enable_maintainer_make_rules" = x"yes"])
-
 # Enable as many compiler warnings as possible (this is tailered to gcc,
 # but should not cause failures of problems for other compilers).
 # This code *must* be set after any check on cc, c headers, c functions
@@ -129,27 +113,35 @@ done
 AS_UNSET([flag])
 
 #
-# Hack to support C++ compilers.
+# Checks for things needed by the test suite.
 #
 
-AH_TOP([/* Support for C++ compilers */
-#ifdef __cplusplus
-#  define C_DECL extern "C"
-#  define BEGIN_C_DECLS extern "C" {
-#  define END_C_DECLS }
-# else
-#  define C_DECL
-#  define BEGIN_C_DECLS
-#  define END_C_DECLS
-#endif])
+# Common utilities.
+AC_PROG_GREP
+AC_PROG_EGREP
+AC_PROG_FGREP
+AC_PROG_SED
+AC_PROG_AWK
+AC_PROG_LN_S
+
+# Get an available fortran compiler, to be used in testing.
+RAT4_PROG_F77
+
+# Look for a diff command that can produce better human-readable output.
+RAT4_PROG_DIFF_U
 
 #
 # Do output.
 #
 
-AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile])
-# Make GNUmakefile available also in VPATH builds.
-AC_CONFIG_LINKS([GNUmakefile:GNUmakefile])
+## Make GNUmakefile available also in VPATH builds.
+#AC_CONFIG_LINKS([GNUmakefile:GNUmakefile])
+
+AC_CONFIG_FILES([Makefile])
+# Be sure to make the generated file `defs.sh' readonly, to avoid that
+# absent-minded developers modify it instead of `defs.in'.
+# It already happened too many times.
+AC_CONFIG_FILES([defs.sh:defs.in], [chmod a-w defs.sh])
 
 AC_OUTPUT
 
