@@ -1,5 +1,10 @@
 List of user-visible changes of Public Domain Ratfor.
 
+New in XXX
+-----------
+ * The ratfor testsuite in `tests/' is now a subpackage, with its own
+   configure, Makefile.am, auto* auxiliary files etc.
+
 New in 1.0j
 -----------
  * Since Fortran 77 is ubiquitous today, and Fortran 66 almost forgotten,
